--- a/caelum/css/sobre.css
+++ b/caelum/css/sobre.css
@@ -1,38 +1,127 @@
-body	{
-    width: 940px;
+body {
     margin: 0 auto;
-    font-family: "Helvetica",	"Lucida	Grande",	sans-serif;
+    font-family: "Helvetica", "Lucida	Grande", sans-serif;
     color: #3D3D3D;
+    font-size: 16px;
+    line-height: 1.5;
+    width:80%;
+    max-width: 940px;
 }
-.titulo	{
+
+.titulo {
     padding: 10px;
     background-color: #E1EDF2;
 }
-.subtitulo	{
-    border-bottom: 2px	solid	black;
+
+.subtitulo {
+    border-bottom: 2px solid black;
 }
-figure	{
+
+figure {
     margin: 30px;
-    padding: 15px;
-    text-align:	center;
-    background-color:	whitesmoke;
-    border: 1px	solid	lightgrey;
+    padding: 30px;
+    max-width: 100%;
+    box-sizing: border-box;
+    text-align: center;
+    background-color: whitesmoke;
+    border: 1px solid lightgrey;
 }
-figcaption	{
+
+figcaption {
     margin-top: 10px;
 }
 
-.matriz-musicdot	{
-		width: 550px;
-		margin-left:	auto;
-		margin-right:	auto;
+.matriz-musicdot {
+    width: 550px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.familia-tupfeln	{
-		width: 275px;
-		float:right;
+.familia-tupfeln {
+    width: 275px;
+    float: right;
 }
 
-figure img	{
-	width:100%;
+figure img {
+    width: 100%;
+}
+
+.contato__subtitulo {
+    display: inline;
+}
+
+.contato__info {
+    margin: 16px 0 24px;
+    padding-left: 32px;
+}
+
+.contato__info-titulo,
+.contato__info-descricao {
+    display: inline;
+}
+
+.contato__info-descricao {
+    margin-left: 10px;
+}
+
+.contato__secao{
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 16px;
+}
+.contato__secao--telefone{
+    margin-left:32px;
+}
+
+.rodape{
+    padding: 1.75em;
+    font-size: 1.1rem;
+}
+.rodape__logo{
+    width: 6em;
+}
+
+.rodape__copyright{
+    display:inline;
+    margin-left: 1em;
+}
+
+@media (max-width:850px){
+    .contato__secao{
+      display: block;
+      margin-left: 1em;
+    }
+  
+}
+
+@media (max-width:622px){
+    .familia-tupfeln{
+        float:none;
+        margin:0 auto;
+    }
+}
+
+@media(max-width:655px){
+    .contato__info-titulo,.contato__info-descricao{
+        display: block;
+        padding-left: 1em;
+    }
+}
+
+@media(max-width:456px){
+    .contato__subtitulo{
+        display:block;
+    }
+    .contato__info{
+        border-left: solid 3px rgb(208, 205, 205);
+        padding-left: 5px;
+        font-size: 0.92rem;
+    }
+    .rodape{
+        font-size: 0.92rem;
+    }
+}
+
+@media(max-width:342px){
+    
 }
