--- a/caelum/css/cabecalho.css
+++ b/caelum/css/cabecalho.css
@@ -31,7 +31,8 @@
 
 @media (min-width: 640px) {
     .cabecalho {
-        padding: 0 5%;
+        padding-top:0;
+        padding-bottom: 0;
         display: flex;
         justify-content: space-between;
         align-items: center;
